# ESP32S3BOX3MotorController

./: CAN2USBAdapterDeviceRecognition.py  CLAUDE.md  CMakeLists.txt  CVMeasure.py  README.md  SETUP_UBUNTU.md  ToDo.md  bridge.py  flash.sh  launch_bridge.bat  launch_bridge.sh  mks_motor.py  pyproject.toml  requirements.txt  sdkconfig.defaults  setup_docker.sh
.claude/: auto-push.sh  settings.json
claude_test/: README.md  test_group_interlock.py
main/: CMakeLists.txt  Kconfig.projbuild  can_motor.c  can_motor.h  cmd_link.c  cmd_link.h  idf_component.yml  main.c  motor_cmd.c  motor_cmd.h  motor_ctrl.c  motor_ctrl.h  motor_rx.c  motor_rx.h  network.c  network.h  ui.c  ui.h
