[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mks_motor"
version = "0.1.0"
description = "PC-side driver for MKS SERVO57D closed-loop steppers over USB2CAN (pyftdi)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "kkhyunhho" }]
keywords = ["mks", "servo57d", "can", "usb2can", "ftdi", "stepper", "motor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "pyserial>=3.5",
    "pyftdi>=0.55",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
# bridge.py exposes a small REST API alongside the TCP transport.
bridge = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mks_motor"]

[tool.ruff]
line-length = 80
target-version = "py312"
src = ["src", "claude_test"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.mypy]
python_version = "3.12"
files = ["src/mks_motor"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "pyftdi.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
